--- a/resources/sass/templates/_toolbar.scss
+++ b/resources/sass/templates/_toolbar.scss
@@ -93,7 +93,10 @@
                 flex-direction: column;
                 pointer-events: all;
                 margin-bottom: 2px;
+                max-height: 26rem;
+                overflow: auto;
                 display: none;
+                
 
 				&.show {
 					display: flex;
